added flange & stand handlers
