# api_service/app/internal/models/stand.go
@@ -1,0 +1,5 @@
+package models
+
+type StandDTO struct {
+	Title string `json:"title" binding:"required"`
+}
